--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -3,10 +3,12 @@ log4j.rootLogger = info,C,F
 ## for console  
 log4j.appender.C=org.apache.log4j.ConsoleAppender  
 log4j.appender.C.layout=org.apache.log4j.PatternLayout  
+log4j.appender.C.Encoding=UTF-8
 log4j.appender.C.layout.ConversionPattern=%-d{MM-dd HH:mm:ss}[%c-%L][%r] - %m%n
 ## for file
 log4j.appender.F=org.apache.log4j.FileAppender
-log4j.appender.F.File = D://log/log.log  
+log4j.appender.F.File = /var/local/wechat.log
+log4j.appender.F.encoding = UTF-8
 log4j.appender.F.Append = true  
 log4j.appender.F.Threshold = INFO  
 log4j.appender.F.DatePattern='.'yyyy-MM-dd  
